pages/docs/api/v2/api-docs-mdx/endpoints/aliases.mdx
import Example from '~/components/example'
import { Code, InlineCode } from '~/components/text/code'
import { HelpLink } from '~/components/text/link'
import Endpoint from '~/components/api/endpoint'
import Request from '~/components/api/request'

export const meta = {
  editUrl: 'pages/docs/api/v2/api-docs-mdx/endpoints/aliases.mdx',
  lastEdited: '2019-01-21T01:10:06.000Z'
}

## Aliases

### List all the aliases

<Endpoint method="GET" url="/v2/now/aliases" />

Retrieves all of the active aliases for the authenticated user.
The body will contain an entry for each alias.

#### Response Parameters

| Key              | <HelpLink href="#api-basics/types" hasIcon>Type</HelpLink> | Description                                                           |
| ---------------- | ---------------------------------------------------------- | --------------------------------------------------------------------- |
| **uid**          | <HelpLink href="#api-basics/types">ID</HelpLink>           | The unique identifier of the alias.                                   |
| **alias**        | <HelpLink href="#api-basics/types">String</HelpLink>       | The alias name, it could be a `.now.sh` subdomain or a custom domain. |
| **created**      | <HelpLink href="#api-basics/types">Date</HelpLink>         | The date when the alias was created.                                  |
| **deployment**   | <HelpLink href="#api-basics/types">Map</HelpLink>          | A map with the deployment ID and URL.                                 |
| **deploymentId** | <HelpLink href="#api-basics/types">ID</HelpLink>           | The deployment ID.                                                    |

#### Deployment

This is the format of the `deployment` described above.

| Key     | <HelpLink href="#api-basics/types" hasIcon>Type</HelpLink> | Description                       |
| ------- | ---------------------------------------------------------- | --------------------------------- |
| **id**  | <HelpLink href="#api-basics/types">ID</HelpLink>           | The deployment unique identifier. |
| **url** | <HelpLink href="#api-basics/types">String</HelpLink>       | The deployment unique URL.        |

<Example>
  <span>Example request:</span>

<Request
  url="https://api.zeit.co/v2/now/aliases"
  headers={{
    Authorization: `Bearer ${
      props.testingToken ? props.testingToken.token : '$TOKEN'
    }`
  }}
/>

Example successful (**200**) response:

<Code lang="json">{`{
  "aliases": [
    {
      "uid": "2WjyKQmM8ZnGcJsPWMrHRHrE",
      "alias": "my-alias",
      "created": "2016-06-02T21:01:40.950Z",
      "deployment": {
        "id": "c9MrOWGzdJSfPxqyTDYhdEGN",
        "url": "my-app-fjvngszyiq.now.sh"
      },
      "deploymentId": "c9MrOWGzdJSfPxqyTDYhdEGN"
    },
    {
      "uid": "CR3bdJZkiaAuh9yr0OHXJJPG",
      "alias": "my-alias-2",
      "created": "2016-06-01T21:03:10.420Z",
      "rules": [
          {
              "pathname": "/",
              "dest": "my-app-fjvngszyiq.now.sh"
          },
          {
              "dest": "my-api-ibzcpajvlo.now.sh"
          }
      ]
    }
  ]
}`}</Code>
</Example>

### Remove an alias

<Endpoint method="DELETE" url="/v2/now/aliases/:id" />

The API allows you to delete an alias by supplying the alias `:id` in the url.
You can obtain this id from the list of aliases.

#### Response Parameters

| Key        | <HelpLink href="#api-basics/types" hasIcon>Type</HelpLink> | Description                            |
| ---------- | ---------------------------------------------------------- | -------------------------------------- |
| **status** | <HelpLink href="#api-basics/types">String</HelpLink>       | If the alias was successfully removed. |

<Example>
  <span>Example request:</span>

<Request
  method="DELETE"
  url="https://api.zeit.co/v2/now/aliases/2WjyKQmM8ZnGcJsPWMrHRHrE"
  headers={{
    Authorization: `Bearer ${
      props.testingToken ? props.testingToken.token : '$TOKEN'
    }`
  }}
/>

Example successful (**200**) response:

<Code lang="json">{`{
  "status": "SUCCESS"
}`}</Code>
</Example>

### Purge Alias in Now CDN

<Endpoint method="PURGE" url="/v2/now/aliases/:id" />

Purges [the CDN](/docs/v2/domains-and-aliases/cdn) of content from the given alias via `:id`.

#### Response Parameters

| Key        | <HelpLink href="#api-basics/types" hasIcon>Type</HelpLink> | Description                                                       |
| ---------- | ---------------------------------------------------------- | ----------------------------------------------------------------- |
| **status** | <HelpLink href="#api-basics/types">String</HelpLink>       | The status of the purge request. The value should be `REQUESTED`. |

<Example>
<span>Example of a <InlineCode>PURGE</InlineCode> request:</span>

<Request
  method="PURGE"
  url="https://api.zeit.co/v2/now/aliases/:id"
  headers={{
    Authorization: `Bearer ${
      props.testingToken ? props.testingToken.token : '$TOKEN'
    }`
  }}
/>

Example of a successful (**200**) response:

<Code lang="json">{`{
  "status": "REQUESTED"
}`}</Code>
</Example>

### List aliases by deployment

<Endpoint method="GET" url="/v2/now/deployments/:id/aliases" />

Retrieves all of the aliases for the deployment with the given `:id`.
The authenticating user must own this deployment.
The body will contain an entry for each alias.

#### Response Parameters

| Key         | <HelpLink href="#api-basics/types" hasIcon>Type</HelpLink> | Description                                       |
| ----------- | ---------------------------------------------------------- | ------------------------------------------------- |
| **aliases** | <HelpLink href="#api-basics/types">List</HelpLink>         | A list of the aliases assigned to the deployment. |

#### Alias

This is the format of each item in the `aliases` list.

| Key         | <HelpLink href="#api-basics/types" hasIcon>Type</HelpLink> | Description                                                           |
| ----------- | ---------------------------------------------------------- | --------------------------------------------------------------------- |
| **uid**     | <HelpLink href="#api-basics/types">ID</HelpLink>           | The unique identifier of the alias.                                   |
| **alias**   | <HelpLink href="#api-basics/types">String</HelpLink>       | The alias name, it could be a `.now.sh` subdomain or a custom domain. |
| **created** | <HelpLink href="#api-basics/types">String</HelpLink>       | The date when the alias was created.                                  |

<Example>
  <span>Example request:</span>

<Request
  url="https://api.zeit.co/v2/now/deployments/7Npest0z1zW5QVFfNDBId4BW/aliases"
  headers={{
    Authorization: `Bearer ${
      props.testingToken ? props.testingToken.token : '$TOKEN'
    }`
  }}
/>

Example successful (**200**) response:

<Code lang="json">{`{
  "aliases": [
    {
      "uid": "2WjyKQmM8ZnGcJsPWMrHRHrE",
      "alias": "my-alias",
      "created": "2016-06-02T21:01:40.950Z",
    }
  ]
}`}</Code>
</Example>

### Assign an alias to a deployment

<Endpoint method="POST" url="/v2/now/deployments/:id/aliases" />

Creates a new alias for the deployment with the given `:id`. The authenticated user must own this deployment.

The JSON body of the POST should contain an `alias` key with the desired alias (hostname or custom url).

If the desired alias was used before it will be removed from the old deployment and assigned to the new one.

#### Request Parameters

| Key       | <HelpLink href="#api-basics/types" hasIcon>Type</HelpLink> | Required | Description                                                       |
| --------- | ---------------------------------------------------------- | -------- | ----------------------------------------------------------------- |
| **alias** | <HelpLink href="#api-basics/types">String</HelpLink>       | Yes      | The alias we want to assign to the deployment defined in the URL. |

#### Response Parameters

| Key         | <HelpLink href="#api-basics/types" hasIcon>Type</HelpLink> | Description                                                                                               |
| ----------- | ---------------------------------------------------------- | --------------------------------------------------------------------------------------------------------- |
| **oldID**   | <HelpLink href="#api-basics/types">ID</HelpLink>           | The unique identifier of the previously aliased deployment, only received when the alias was used before. |
| **uid**     | <HelpLink href="#api-basics/types">ID</HelpLink>           | The unique identifier of the alias.                                                                       |
| **created** | <HelpLink href="#api-basics/types">Date</HelpLink>         | The date when the alias was created.                                                                      |

<Example>
  <span>Example request:</span>

<Request
  method="POST"
  url="https://api.zeit.co/v2/now/deployments/7Npest0z1zW5QVFfNDBId4BW/aliases"
  headers={{
    Authorization: `Bearer ${
      props.testingToken ? props.testingToken.token : '$TOKEN'
    }`,
    'Content-Type': 'application/json'
  }}
  body={{
    alias: 'my-alias.now.sh'
  }}
/>

Example successful (**200**) response for new alias:

<Code lang="json">{`{
  "uid": "2WjyKQmM8ZnGcJsPWMrHRHrE",
  "created": "2016-06-02T21:01:40.950Z"
}`}</Code>

Example successful (**200**) response for alias with existing deployment
(<InlineCode>oldId</InlineCode> is the id of the previous deployment):

<Code lang="json">{`{
  "oldId": "c9MrOWGzdJSfPxqyTDYhdEGN",
  "uid": "2WjyKQmM8ZnGcJsPWMrHRHrE",
  "created": "2016-06-02T21:01:40.950Z"
}`}</Code>
</Example>
